Revert "Remove Bootstrap 3 interop styles, fix collapsable elements (bsc#1239795) (#26788)"
This reverts commit eb35c3a61fd580c5329666d9f4212e05f4eb7d8b.

--- a/web/html/src/branding/css/base/theme.scss
+++ b/web/html/src/branding/css/base/theme.scss
@@ -176,8 +176,6 @@ section {
 }
 
 .navbar-collapse {
-  animation: none !important;
-  transition: none !important;
   display: flex;
   flex-direction: column;
 
@@ -198,6 +196,14 @@ section {
         margin: 0 !important;
       }
     }
+  }
+
+  &.in {
+    display: flex !important;
+  }
+
+  &.collapse {
+    display: none !important;
   }
 }
 
